lab1/ParLab.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParLab.y
-----------------------------------------------------------------------------

state 284 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pAss -> Ass                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pListAss -> ListAss                         (5)
	%start_pListStm -> ListStm                         (6)
	%start_pArg -> Arg                                 (7)
	%start_pStm -> Stm                                 (8)
	%start_pRecAss -> RecAss                           (9)
	%start_pWhile -> While                             (10)
	%start_pElse -> Else                               (11)
	%start_pListId -> ListId                           (12)
	%start_pListRecAss -> ListRecAss                   (13)
	%start_pQConsts -> QConsts                         (14)
	%start_pQConst -> QConst                           (15)
	%start_pListQConst -> ListQConst                   (16)
	%start_pExp15 -> Exp15                             (17)
	%start_pExp14 -> Exp14                             (18)
	%start_pExp13 -> Exp13                             (19)
	%start_pExp12 -> Exp12                             (20)
	%start_pExp11 -> Exp11                             (21)
	%start_pExp10 -> Exp10                             (22)
	%start_pExp9 -> Exp9                               (23)
	%start_pExp8 -> Exp8                               (24)
	%start_pExp4 -> Exp4                               (25)
	%start_pExp3 -> Exp3                               (26)
	%start_pExp2 -> Exp2                               (27)
	%start_pExp1 -> Exp1                               (28)
	%start_pExp -> Exp                                 (29)
	%start_pExp5 -> Exp5                               (30)
	%start_pExp6 -> Exp6                               (31)
	%start_pExp7 -> Exp7                               (32)
	%start_pListExp -> ListExp                         (33)
	%start_pLStrings -> LStrings                       (34)
	%start_pListString -> ListString                   (35)
	%start_pType -> Type                               (36)
	Char -> L_charac                                   (37)
	Integer -> L_integ                                 (38)
	Double -> L_doubl                                  (39)
	String -> L_quoted                                 (40)
	Id -> L_Id                                         (41)
	Program -> ListDef                                 (42)
	ListDef ->                                         (43)
	ListDef -> ListDef Def                             (44)
	Def -> 'using' QConsts ';'                         (45)
	Def -> 'typedef' Type Id ';'                       (46)
	Def -> Type ListAss ';'                            (47)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (48)
	Def -> Type Id '(' ListArg ')' ';'                 (49)
	Ass -> Id                                          (50)
	Ass -> Id '=' Exp                                  (51)
	Ass -> '&' Id '=' Id                               (52)
	ListArg ->                                         (53)
	ListArg -> Arg                                     (54)
	ListArg -> Arg ',' ListArg                         (55)
	ListAss -> Ass                                     (56)
	ListAss -> Ass ',' ListAss                         (57)
	ListStm ->                                         (58)
	ListStm -> ListStm Stm                             (59)
	Arg -> Type                                        (60)
	Arg -> Type Id                                     (61)
	Arg -> Type Id '=' Exp                             (62)
	Arg -> Type '&' Id                                 (63)
	Arg -> Type '&'                                    (64)
	Arg -> 'const' Type '&' Id                         (65)
	Arg -> 'const' Type '&'                            (66)
	Arg -> 'const' Type Id                             (67)
	Stm -> Exp ';'                                     (68)
	Stm -> 'const' Type '&' Id ';'                     (69)
	Stm -> 'const' Type ListId '=' Exp ';'             (70)
	Stm -> 'const' Type '&' Id '=' Exp ';'             (71)
	Stm -> 'const' Type ListId ';'                     (72)
	Stm -> Type ListRecAss ';'                         (73)
	Stm -> 'return' Exp ';'                            (74)
	Stm -> While Stm                                   (75)
	Stm -> While ';'                                   (76)
	Stm -> 'do' Stm While ';'                          (77)
	Stm -> '{' ListStm '}'                             (78)
	Stm -> 'for' '(' Type Id '=' Exp ';' Exp ';' Exp ')' Stm   (79)
	Stm -> 'for' '(' Type Id ';' Exp ';' Exp ')' Stm   (80)
	Stm -> 'for' '(' 'const' Type Id '=' Exp ';' Exp ';' Exp ')' Stm   (81)
	Stm -> 'if' '(' Exp ')' Stm Else                   (82)
	Stm -> 'typedef' Type Id ';'                       (83)
	RecAss -> Id '=' Exp                               (84)
	RecAss -> Id                                       (85)
	While -> 'while' '(' Exp ')'                       (86)
	Else ->                                            (87)
	Else -> 'else' Stm                                 (88)
	ListId -> Id                                       (89)
	ListId -> Id ',' ListId                            (90)
	ListRecAss -> RecAss                               (91)
	ListRecAss -> RecAss ',' ListRecAss                (92)
	QConsts -> ListQConst                              (93)
	QConst -> Id                                       (94)
	ListQConst -> QConst                               (95)
	ListQConst -> QConst '::' ListQConst               (96)
	Exp15 -> Char                                      (97)
	Exp15 -> Integer                                   (98)
	Exp15 -> Double                                    (99)
	Exp15 -> LStrings                                  (100)
	Exp15 -> QConsts                                   (101)
	Exp15 -> 'true'                                    (102)
	Exp15 -> 'false'                                   (103)
	Exp15 -> '(' Exp ')'                               (104)
	Exp14 -> Exp14 '[' Exp ']'                         (105)
	Exp14 -> Exp14 '(' ListExp ')'                     (106)
	Exp14 -> Exp14 '++'                                (107)
	Exp14 -> Exp14 '--'                                (108)
	Exp14 -> Exp14 '.' Exp15                           (109)
	Exp14 -> Exp14 '->' Exp15                          (110)
	Exp14 -> Exp15                                     (111)
	Exp13 -> '++' Exp13                                (112)
	Exp13 -> '--' Exp13                                (113)
	Exp13 -> '*' Exp13                                 (114)
	Exp13 -> '!' Exp13                                 (115)
	Exp13 -> Exp14                                     (116)
	Exp12 -> Exp12 '%' Exp13                           (117)
	Exp12 -> Exp12 '*' Exp13                           (118)
	Exp12 -> Exp12 '/' Exp13                           (119)
	Exp12 -> Exp13                                     (120)
	Exp11 -> Exp11 '+' Exp12                           (121)
	Exp11 -> Exp11 '-' Exp12                           (122)
	Exp11 -> Exp12                                     (123)
	Exp10 -> Exp10 '<<' Exp11                          (124)
	Exp10 -> Exp10 '>>' Exp11                          (125)
	Exp10 -> Exp11                                     (126)
	Exp9 -> Exp9 '<' Exp10                             (127)
	Exp9 -> Exp9 '>' Exp10                             (128)
	Exp9 -> Exp9 '<=' Exp10                            (129)
	Exp9 -> Exp9 '>=' Exp10                            (130)
	Exp9 -> Exp10                                      (131)
	Exp8 -> Exp8 '==' Exp9                             (132)
	Exp8 -> Exp8 '!=' Exp9                             (133)
	Exp8 -> Exp9                                       (134)
	Exp4 -> Exp4 '&&' Exp5                             (135)
	Exp4 -> Exp5                                       (136)
	Exp3 -> Exp3 '||' Exp4                             (137)
	Exp3 -> Exp4                                       (138)
	Exp2 -> Exp3 '=' Exp2                              (139)
	Exp2 -> Exp3 '-=' Exp2                             (140)
	Exp2 -> Exp3 '+=' Exp2                             (141)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (142)
	Exp2 -> Exp3                                       (143)
	Exp1 -> 'throw' Exp1                               (144)
	Exp1 -> Exp2                                       (145)
	Exp -> Exp1                                        (146)
	Exp5 -> Exp6                                       (147)
	Exp6 -> Exp7                                       (148)
	Exp7 -> Exp8                                       (149)
	ListExp ->                                         (150)
	ListExp -> Exp                                     (151)
	ListExp -> Exp ',' ListExp                         (152)
	LStrings -> ListString                             (153)
	ListString -> String                               (154)
	ListString -> String ListString                    (155)
	Type -> 'bool'                                     (156)
	Type -> 'double'                                   (157)
	Type -> 'int'                                      (158)
	Type -> 'void'                                     (159)
	Type -> QConsts                                    (160)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'true'         { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'using'        { PT _ (TS _ 46) }
	'void'         { PT _ (TS _ 47) }
	'while'        { PT _ (TS _ 48) }
	'{'            { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pAss     rule  3
	%start_pListArg rule  4
	%start_pListAss rule  5
	%start_pListStm rule  6
	%start_pArg     rule  7
	%start_pStm     rule  8
	%start_pRecAss  rule  9
	%start_pWhile   rule  10
	%start_pElse    rule  11
	%start_pListId  rule  12
	%start_pListRecAss rule  13
	%start_pQConsts rule  14
	%start_pQConst  rule  15
	%start_pListQConst rule  16
	%start_pExp15   rule  17
	%start_pExp14   rule  18
	%start_pExp13   rule  19
	%start_pExp12   rule  20
	%start_pExp11   rule  21
	%start_pExp10   rule  22
	%start_pExp9    rule  23
	%start_pExp8    rule  24
	%start_pExp4    rule  25
	%start_pExp3    rule  26
	%start_pExp2    rule  27
	%start_pExp1    rule  28
	%start_pExp     rule  29
	%start_pExp5    rule  30
	%start_pExp6    rule  31
	%start_pExp7    rule  32
	%start_pListExp rule  33
	%start_pLStrings rule  34
	%start_pListString rule  35
	%start_pType    rule  36
	Char            rule  37
	Integer         rule  38
	Double          rule  39
	String          rule  40
	Id              rule  41
	Program         rule  42
	ListDef         rules 43, 44
	Def             rules 45, 46, 47, 48, 49
	Ass             rules 50, 51, 52
	ListArg         rules 53, 54, 55
	ListAss         rules 56, 57
	ListStm         rules 58, 59
	Arg             rules 60, 61, 62, 63, 64, 65, 66, 67
	Stm             rules 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83
	RecAss          rules 84, 85
	While           rule  86
	Else            rules 87, 88
	ListId          rules 89, 90
	ListRecAss      rules 91, 92
	QConsts         rule  93
	QConst          rule  94
	ListQConst      rules 95, 96
	Exp15           rules 97, 98, 99, 100, 101, 102, 103, 104
	Exp14           rules 105, 106, 107, 108, 109, 110, 111
	Exp13           rules 112, 113, 114, 115, 116
	Exp12           rules 117, 118, 119, 120
	Exp11           rules 121, 122, 123
	Exp10           rules 124, 125, 126
	Exp9            rules 127, 128, 129, 130, 131
	Exp8            rules 132, 133, 134
	Exp4            rules 135, 136
	Exp3            rules 137, 138
	Exp2            rules 139, 140, 141, 142, 143
	Exp1            rules 144, 145
	Exp             rule  146
	Exp5            rule  147
	Exp6            rule  148
	Exp7            rule  149
	ListExp         rules 150, 151, 152
	LStrings        rule  153
	ListString      rules 154, 155
	Type            rules 156, 157, 158, 159, 160

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 43
	'double'       reduce using rule 43
	'int'          reduce using rule 43
	'typedef'      reduce using rule 43
	'using'        reduce using rule 43
	'void'         reduce using rule 43
	L_Id           reduce using rule 43
	%eof           reduce using rule 43

	Program        goto state 143
	ListDef        goto state 144

State 1


	'bool'         reduce using rule 43
	'double'       reduce using rule 43
	'int'          reduce using rule 43
	'typedef'      reduce using rule 43
	'using'        reduce using rule 43
	'void'         reduce using rule 43
	L_Id           reduce using rule 43
	%eof           reduce using rule 43

	ListDef        goto state 142

State 2


	'bool'         shift, and enter state 44
	'double'       shift, and enter state 45
	'int'          shift, and enter state 46
	'typedef'      shift, and enter state 140
	'using'        shift, and enter state 141
	'void'         shift, and enter state 47
	L_Id           shift, and enter state 48

	Id             goto state 39
	Def            goto state 138
	QConsts        goto state 40
	QConst         goto state 41
	ListQConst     goto state 42
	Type           goto state 139

State 3


	'&'            shift, and enter state 134
	L_Id           shift, and enter state 48

	Id             goto state 131
	Ass            goto state 137

State 4


	'bool'         shift, and enter state 44
	'const'        shift, and enter state 129
	'double'       shift, and enter state 45
	'int'          shift, and enter state 46
	'void'         shift, and enter state 47
	L_Id           shift, and enter state 48
	%eof           reduce using rule 53

	Id             goto state 39
	ListArg        goto state 135
	Arg            goto state 136
	QConsts        goto state 40
	QConst         goto state 41
	ListQConst     goto state 42
	Type           goto state 128

State 5


	'&'            shift, and enter state 134
	L_Id           shift, and enter state 48

	Id             goto state 131
	Ass            goto state 132
	ListAss        goto state 133

State 6


	'!'            reduce using rule 58
	'('            reduce using rule 58
	'*'            reduce using rule 58
	'++'           reduce using rule 58
	'--'           reduce using rule 58
	'bool'         reduce using rule 58
	'const'        reduce using rule 58
	'do'           reduce using rule 58
	'double'       reduce using rule 58
	'false'        reduce using rule 58
	'for'          reduce using rule 58
	'if'           reduce using rule 58
	'int'          reduce using rule 58
	'return'       reduce using rule 58
	'throw'        reduce using rule 58
	'true'         reduce using rule 58
	'typedef'      reduce using rule 58
	'void'         reduce using rule 58
	'while'        reduce using rule 58
	'{'            reduce using rule 58
	L_charac       reduce using rule 58
	L_integ        reduce using rule 58
	L_doubl        reduce using rule 58
	L_quoted       reduce using rule 58
	L_Id           reduce using rule 58
	%eof           reduce using rule 58

	ListStm        goto state 130

State 7


	'bool'         shift, and enter state 44
	'const'        shift, and enter state 129
	'double'       shift, and enter state 45
	'int'          shift, and enter state 46
	'void'         shift, and enter state 47
	L_Id           shift, and enter state 48

	Id             goto state 39
	Arg            goto state 127
	QConsts        goto state 40
	QConst         goto state 41
	ListQConst     goto state 42
	Type           goto state 128

State 8


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'bool'         shift, and enter state 44
	'const'        shift, and enter state 120
	'do'           shift, and enter state 121
	'double'       shift, and enter state 45
	'false'        shift, and enter state 81
	'for'          shift, and enter state 122
	'if'           shift, and enter state 123
	'int'          shift, and enter state 46
	'return'       shift, and enter state 124
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	'typedef'      shift, and enter state 125
	'void'         shift, and enter state 47
	'while'        shift, and enter state 113
	'{'            shift, and enter state 126
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	Stm            goto state 115
	While          goto state 116
	QConsts        goto state 117
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 68
	Exp1           goto state 69
	Exp            goto state 118
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53
	Type           goto state 119

State 9


	L_Id           shift, and enter state 48

	Id             goto state 105
	RecAss         goto state 114

State 10


	'while'        shift, and enter state 113

	While          goto state 112

State 11


	'else'         shift, and enter state 111
	%eof           reduce using rule 87

	Else           goto state 110

State 12


	L_Id           shift, and enter state 48

	Id             goto state 108
	ListId         goto state 109

State 13


	L_Id           shift, and enter state 48

	Id             goto state 105
	RecAss         goto state 106
	ListRecAss     goto state 107

State 14


	L_Id           shift, and enter state 48

	Id             goto state 39
	QConsts        goto state 104
	QConst         goto state 41
	ListQConst     goto state 42

State 15


	L_Id           shift, and enter state 48

	Id             goto state 39
	QConst         goto state 103

State 16


	L_Id           shift, and enter state 48

	Id             goto state 39
	QConst         goto state 41
	ListQConst     goto state 102

State 17


	'('            shift, and enter state 77
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 101
	LStrings       goto state 75
	ListString     goto state 53

State 18


	'('            shift, and enter state 77
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 100
	LStrings       goto state 75
	ListString     goto state 53

State 19


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 99
	LStrings       goto state 75
	ListString     goto state 53

State 20


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 98
	LStrings       goto state 75
	ListString     goto state 53

State 21


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 97
	LStrings       goto state 75
	ListString     goto state 53

State 22


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 96
	LStrings       goto state 75
	ListString     goto state 53

State 23


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 95
	LStrings       goto state 75
	ListString     goto state 53

State 24


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 94
	LStrings       goto state 75
	ListString     goto state 53

State 25


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 93
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 26


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 92
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 27


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 91
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 28


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 68
	Exp1           goto state 90
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 29


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'throw'        shift, and enter state 82
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp4           goto state 66
	Exp3           goto state 67
	Exp2           goto state 68
	Exp1           goto state 69
	Exp            goto state 89
	Exp5           goto state 71
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 30


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp5           goto state 88
	Exp6           goto state 72
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 31


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp6           goto state 87
	Exp7           goto state 73
	LStrings       goto state 75
	ListString     goto state 53

State 32


	'!'            shift, and enter state 76
	'('            shift, and enter state 77
	'*'            shift, and enter state 78
	'++'           shift, and enter state 79
	'--'           shift, and enter state 80
	'false'        shift, and enter state 81
	'true'         shift, and enter state 83
	L_charac       shift, and enter state 38
	L_integ        shift, and enter state 84
	L_doubl        shift, and enter state 85
	L_quoted       shift, and enter state 51
	L_Id           shift, and enter state 48

	Char           goto state 54
	Integer        goto state 55
	Double         goto state 56
	String         goto state 49
	Id             goto state 39
	QConsts        goto state 57
	QConst         goto state 41
	ListQConst     goto state 42
	Exp15          goto state 58
	Exp14          goto state 59
	Exp13          goto state 60
	Exp12          goto state 61
	Exp11          goto state 62
	Exp10          goto state 63
	Exp9           goto state 64
	Exp8           goto state 65
	Exp7           goto state 86
	LStrings       goto state 75
	ListString     goto state 53

State 33

